# HBL

./: .env.example  .gitignore  README.md  pyproject.toml
aws/original-issuer/: README.md  deploy-iam-policy.json  requirements.txt
aws/original-issuer/scripts/: build_lambda_zip.sh  deploy_aws_cli.sh
aws/verification-service/: README.md  deploy-iam-policy.json  template.yaml
aws/verification-service/scripts/: deploy_aws_cli.sh
aws/verification-service/src/: app.py
config/: clickup_fields.yaml  container_words.yaml  date_formats.yaml  email_templates.yaml  entity_rules.yaml  excel_cell_mapping.yaml  file_naming_rules.yaml  hbl_business_rules.yaml  qa_rules.yaml  source_of_truth_rules.yaml
config/customers/: antique.yaml  eskolor.yaml  masesa.yaml  repuestos_acquaroni.yaml
src/mtm_hbl/: __init__.py  clickup_hbl_generator.py  config.py  local_review.py  pipeline.py
src/mtm_hbl/api/: main.py
src/mtm_hbl/audit/: audit_logger.py
templates/: ingest_result.json  mtm_guatemala_hbl_template_348516057779.xlsx  mtm_guatemala_hbl_template_348516057779_profile.json
tests/: __init__.py  conftest.py  test_aws_original_issuer_handler.py  test_aws_verification_repository.py  test_business_rules.py  test_carrier_receipt.py  test_charges.py  test_clickup_boundaries.py  test_clickup_hbl_generator.py  test_customer_rules.py  test_excel_writer.py  test_extractor.py  test_hbl_package_pdf.py  test_source_resolver.py  test_usa_mbl_only_strategy.py  test_validation_engine.py  test_verification_service_app.py
tools/: generate_from_clickup.py  issue_dev_hbl_package.py
(+35 files in other folders)
