[project]
name = "mtm-guatemala-hbl-draft-generator"
version = "0.1.0"
description = "Controlled MTM Guatemala House Bill of Lading draft generator."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.5",
  "reportlab>=4.2.0",
  "pypdf>=4.3.0",
  "pdfplumber>=0.11.0",
  "qrcode[pil]>=7.4.2",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
]
ocr = [
  "pytesseract>=0.3.13",
  "pdf2image>=1.17.0",
]

[project.scripts]
mtm-hbl-api = "mtm_hbl.api.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
